testing/sqltests/tests/snapshot_tests/parenthesized_from/snapshots/parenthesized_from__comma_join_multi_table_inner__no_paren.snap
---
source: parenthesized_from.sqltest
expression: SELECT a.x, b.y, c.z FROM a, b INNER JOIN c ON b.y = c.by_;
info:
  statement_type: SELECT
  tables:
  - a
  - b.y
  - c
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN c
|--SEARCH b USING INTEGER PRIMARY KEY (rowid=?)
`--SCAN a

BYTECODE
addr  opcode         p1  p2  p3  p4        p5  comment
   0  Init            0  15   0             0  Start at 15
   1  OpenRead        0   2   0  k(1,B)     0  table=a, root=2, iDb=0
   2  OpenRead        1   3   0  k(2,B,B)   0  table=b, root=3, iDb=0
   3  OpenRead        2   4   0  k(2,B,B)   0  table=c, root=4, iDb=0
   4  Rewind          2  14   0             0  Rewind table c
   5    Column        2   1   4             0  r[4]=c.by_
   6    SeekRowid     1   4  13             0  if (r[4]!=cursor 1 for table b.rowid) goto 13
   7    Rewind        0  13   0             0  Rewind table a
   8      RowId       0   1   0             0  r[1]=a.rowid
   9      RowId       1   2   0             0  r[2]=b.rowid
  10      RowId       2   3   0             0  r[3]=c.rowid
  11      ResultRow   1   3   0             0  output=r[1..3]
  12    Next          0   8   0             0
  13  Next            2   5   0             0
  14  Halt            0   0   0             0
  15  Transaction     0   1   3             0  iDb=0 tx_mode=Read
  16  Goto            0   1   0             0
